--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.5.0
+  path_provider: ^2.1.0 
   
   # State Management
   riverpod: ^3.0.0
